# scramjet_inlet_control

./: .gitignore  AI_CONTEXT.md  README.md  REPORT.md  pyproject.toml
apps/inlet_dashboard/: app.js  index.html  styles.css
cfd/: sweep_manifest.csv
cfd/templates/: README.md
configs/: data_synthetic.yaml  rl_ppo.yaml  rl_sac.yaml  surrogate.yaml  surrogate_metric_mlp.yaml  surrogate_resnet.yaml  surrogate_unet.yaml
scripts/: check_openfoam.py  create_splits.py  evaluate_agent.py  evaluate_baseline.py  evaluate_surrogate.py  generate_surrogate_report.py  generate_synthetic_dataset.py  import_arrays.py  make_cfd_manifest.py  materialize_cfd_cases.py  open_dashboard.py  plot_dataset_sample.py  postprocess_openfoam_samples.py  replay_rollout_to_cfd_manifest.py  run_cfd_cases.py  train_agent.py  train_surrogate.py  validate_dataset.py
src/scramjet_rl/: __init__.py  cli.py  config.py  dashboard.py  logging.py  plots.py
src/scramjet_rl/cfd/: __init__.py  cases.py  manifest.py  openfoam.py  postprocess.py  replay.py
src/scramjet_rl/data/: __init__.py  dataset.py  importers.py  schema.py  splits.py  synthetic.py
src/scramjet_rl/envs/: __init__.py  scramjet_inlet_env.py
src/scramjet_rl/physics/: __init__.py  shock.py
src/scramjet_rl/rl/: __init__.py  baseline.py  evaluate.py  feature_extractor.py  train.py
src/scramjet_rl/surrogate/: evaluate.py  (+4 more)
tests/: test_baseline.py  test_cfd_manifest.py  test_config.py  test_feature_extractor.py  test_importers.py  test_openfoam.py  test_replay.py  test_schema.py  test_shock.py  test_splits.py  test_synthetic.py
(+9 files in other folders)
