[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scramjet-surrogate-rl"
version = "0.1.0"
description = "Surrogate-model reinforcement learning scaffold for scramjet inlet control."
requires-python = ">=3.10,<3.13"
dependencies = [
  "gymnasium>=0.29",
  "h5py>=3.10",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "stable-baselines3>=2.3",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.scripts]
scramjet = "scramjet_rl.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
